Partially revert "Fix stack-overflow when dealing with blobURL(s)" https://bugs.webkit.org/show_bug.cgi?id=262777

The code change here is incompatible with some other commit, most likely
266247@main. We can still keep the new test, though.

This fixes Unity WebGL applications.

* Source/WebCore/fileapi/BlobURL.cpp:
(WebCore::BlobURL::isSecureBlobURL):