Source/WebCore/fileapi/BlobURL.cpp
@@ -81,7 +81,7 @@ bool BlobURL::isSecureBlobURL(const URL& url)
             return document->isSecureContext();
     }
 
-    return false;
+    return SecurityOrigin::isSecure(getOriginURL(url));
 }
 
 URL BlobURL::createBlobURL(StringView originString)
